--- a/.env
+++ b/.env
@@ -6,10 +6,11 @@ ADMIN_JWT_SECRET=ICYEq3sK1z9zTja9U3I0gg==
 TRANSFER_TOKEN_SALT=Jf/JOiVws+NsHHZUq40d7g==
 # Database
 DATABASE_CLIENT=postgres
-DATABASE_HOST=127.0.0.1
+DATABASE_HOST=207.180.207.107
 DATABASE_PORT=5432
-DATABASE_NAME=bin-rushud-backend
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=2000425@@
-DATABASE_SSL=false
+DATABASE_NAME=binrushud
+DATABASE_USERNAME=binrushud
+DATABASE_PASSWORD='BINbin!@#123'
+DATABASE_SSL=true
+DATABASE_SSL_REJECT_UNAUTHORIZED=false
 JWT_SECRET=6Em+UClW4m06KTjc6sQYLg==
