--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 HOST=0.0.0.0
 PORT=1337
+PUBLIC_URL=https://bin-rushud-api.digital-logic.tech
 APP_KEYS=GrjSmzHyClhHRw6uI0z8cw==,jkpr5DDmnNYJ8G+RJL4d1w==,SVRnP0u5wS9VRevbKny7gA==,afKh9OqMNcd+4c79MhJBNA==
 API_TOKEN_SALT=zhUlwCBT8cA/BAaxUPc4nA==
 ADMIN_JWT_SECRET=ICYEq3sK1z9zTja9U3I0gg==
